--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_overlay_window: ^0.5.0
+ 
   firebase_core: ^3.5.0
   firebase_database: ^11.3.4
-  geolocator: ^13.0.2
-  workmanager: ^0.6.0
-  android_alarm_manager_plus: ^4.0.7
+  background_location: ^0.13.0
+  flutter_overlay_window: ^0.5.0
+ 
+
+
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +65,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
